--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,28 +1,22 @@
-* {
-   background-color: green;
-      color: red;
-   font-size: 50px;
-   text-align:center;
-   #check {
- color: red;
- font-weight: bold;
- font-size: 100px;
- text-align: center;
+
+
+body {
+  background-image: url(https://www.desktopbackground.org/p/2014/01/20/704008_abstract-backgrounds-vector-free-download_1134x860_h.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* position: fixed; */
+
 }
-#get_triangle {
- text-align: center;
- font-size: 150px;
- font-weight: bold;
- color: solid black;
+
+p{
+  font-size:1.7em
 }
-triangle_tracker{
- font-size: 150px;
- color:red ;
- text-align: center;
-}
-#click here {
- width: 260px;
- color: white;
- font-size: 50px;
- text-align: center;
-}
+.transbox {
+  padding: 3px;
+  text-align: center;
+  margin-top: 12%;
+  margin-left: 30%;
+  margin-right:30%;
+  background-color: lightblue;
+  opacity:0.7;
+  filter:alpha(opacity=70);
