--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,6 @@ p{
   margin-top: 12%;
   margin-left: 30%;
   margin-right:30%;
-  background-color: lightblue;
+  background-color: blue;
   opacity:0.7;
   filter:alpha(opacity=70);
